# deap

./: .gitignore  .gitmodules  README  com.github.memnoth.Deap.json  com.github.memnoth.deap.json  meson.build  org.gnome.Deap.json
data/: com.github.memnoth.Deap.appdata.xml.in  com.github.memnoth.Deap.desktop.in  com.github.memnoth.Deap.gschema.xml  meson.build  org.gnome.Deap.appdata.xml.in  org.gnome.Deap.gschema.xml
po/: POTFILES  meson.build
src/: deap-application.c  deap-application.h  deap-debug.h  deap-gnome-shell.c  deap-gnome-shell.h  deap-gnome-shell.ui  deap-login1.c  deap-login1.h  deap-login1.ui  deap-screen-brightness.c  deap-screen-brightness.h  deap-screen-brightness.ui  deap-virtual-terminal.c  deap-virtual-terminal.h  deap-virtual-terminal.ui  deap-window.c  deap-window.h  deap-window.ui  deap.gresource.xml  main.c  meson.build
src/interfaces/: deap-registrable.c  deap-registrable.h
src/logging/: gtd-log.c  gtd-log.h
src/ui/: deap.gresource.xml  meson.build
